fail_crate/tests/duplicate_rename.rs
use inew::New;

#[derive(New)]
#[new(rename = "create", rename = "create")]
struct A;

fn main() {}
